# llm-neofetch-plus

./: .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  CHANGELOG.md  LICENSE  README.md  demo_output.md  llm_neofetch.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
examples/: python_api_usage.py
llm_neofetch/: __init__.py  __main__.py  app.py  defaults.py  detectors.py  environment.py  llm_math.py  ui.py
llm_neofetch/config/: config.yaml
src/: detectors.py  ui.py
tests/: test_all.py
