[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-neofetch-plus"
version = "1.0.0"
description = "Advanced system information tool for local LLM usage"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Hamza Ferrahoglu", email = "fhamz4@proton.me"}
]
keywords = ["llm", "ai", "system-info", "neofetch", "hardware", "gpu", "vram", "ollama", "llama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "psutil>=5.9.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
windows = ["wmi>=1.5.1"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
llm-neofetch = "llm_neofetch:main"
llm-neofetch-plus = "llm_neofetch:main"

[project.urls]
Homepage = "https://github.com/HFerrahoglu/llm-neofetch-plus"
Repository = "https://github.com/HFerrahoglu/llm-neofetch-plus"
Issues = "https://github.com/HFerrahoglu/llm-neofetch-plus/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_neofetch*", "src*", "config*"]

[tool.setuptools.package-data]
"*" = ["config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "UP006", "UP035"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false
allow_untyped_calls = true
allow_untyped_defs = true
